# typer-todo-app

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: main.yml
src/task_manager/: bootstrap.py  cli.py  database.py
src/task_manager/commands/: todos.py
src/task_manager/protocols/: task_repository.py
src/task_manager/repositories/: sql_alchemy_task_repo.py
task-manager/: __main__.py  bootstrap.py  database.py  models.py
task-manager/commands/: todos.py
task-manager/protocols/: task_repository.py
task-manager/repositories/: __init__.py  sql_alchemy_task_repo.py
task_manager/: __main__.py  bootstrap.py
task_manager/commands/: todos.py
tests/: test_sql_alchemy_task_repo.py  test_task_model.py  test_todo_commands.py  utils.py
